--- a/index.html
+++ b/index.html
@@ -3,91 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALFI LUTHFILLAH - 90s Personal Page</title>
+    <title>Curriculum Vitae - Alfi Luthfillah</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="desktop-container">
-    <marquee class="top-banner">+++ SELAMAT DATANG DI HOMEPAGE ALFI LUTHFILLAH ALAMSYAH +++ TERIMA KASIH TELAH BERKUNJUNG! +++</marquee>
+<div class="paper">
+    <div class="stamp">ORIGINAL</div>
+    
+    <header>
+        <h1 class="name-title">ALFI LUTHFILLAH ALAMSYAH</h1>
+        <p class="subtitle">ESTABLISHED 2008 • BOJONGSOANG, BANDUNG</p>
+    </header>
 
-    <div class="main-window">
-        <header>
-            <h1>PROFIL SAYA</h1>
-            <p class="status-text"><span class="blink">ONLINE</span> - Update Terakhir: Feb 2026</p>
-        </header>
+    <hr class="double-line">
 
-        <div class="content-wrapper">
-            <div class="photo-frame">
-                <img src="foto-alfi.jpg" alt="Foto Alfi Luthfillah" class="profile-img">
-                <p class="caption">ALFI_PHOTO.JPG</p>
+    <div class="main-content">
+        <aside class="sidebar">
+            <div class="photo-container">
+                <img src="foto-alfi.jpg" alt="Foto Alfi" class="vintage-photo">
+            </div>
+            
+            <div class="contact-box">
+                <h3>CONTACT</h3>
+                <p>📧 alfiluthfillahalamsyah@gmail.com</p>
+                <p>📸 @alfilthfllh</p>
+                <p>📞 085183601902</p>
             </div>
 
-            <section class="bio">
-                <h3 class="title-bar">Data Diri</h3>
-                <ul>
-                    <li><b>Nama:</b> Alfi Luthfillah Alamsyah</li>
-                    <li><b>Lahir:</b> 2008</li>
-                    <li><b>Kota:</b> Bojongsoang, Bandung</li>
+            <div class="hobbies">
+                <h3>HOBBIES</h3>
+                <p>Football • Gaming</p>
+            </div>
+        </aside>
+
+        <main class="details">
+            <section>
+                <h2 class="section-title">PROFIL</h2>
+                <p>Saya pribadi yang tekun, memiliki rasa ingin tahu tinggi, dan tertarik pada dunia pendidikan serta teknologi. Saya juga terus berusaha mengembangkan diri dan mempersiapkan masa depan yang lebih baik melalui pendidikan.</p>
+            </section>
+
+            <section>
+                <h2 class="section-title">PENDIDIKAN</h2>
+                <ul class="vintage-list">
+                    <li><strong>SMA KP BALEENDAH</strong> <span class="year">(2023-2026)</span></li>
+                    <li><strong>SMPN 1 DAYEUHKOLOT</strong> <span class="year">(2020-2022)</span></li>
+                    <li><strong>SDN CIJAGRA 2</strong> <span class="year">(2014-2019)</span></li>
                 </ul>
             </section>
-        </div>
 
-        <section>
-            <h3 class="title-bar">Kontak</h3>
-            <p>Email: <a href="mailto:alfiluthfillahalamsyah@gmail.com">alfiluthfillahalamsyah@gmail.com</a></p>
-            <p>IG: <a href="https://instagram.com/alfilthfllh">@alfilthfllh</a></p>
-            <p>Telp: 085183601902</p>
-        </section>
-
-        <section>
-            <h3 class="title-bar">Tentang Saya</h3>
-            <p class="box-text">Saya pribadi yang tekun, memiliki rasa ingin tahu tinggi, dan tertarik pada dunia pendidikan serta teknologi. Saya juga terus berusaha mengembangkan diri dan mempersiapkan masa depan yang lebih baik melalui pendidikan.</p>
-        </section>
-
-        <section>
-            <h3 class="title-bar">Pendidikan</h3>
-            <table border="1" class="retro-table">
-                <tr>
-                    <th>Sekolah</th>
-                    <th>Tahun</th>
-                </tr>
-                <tr>
-                    <td>SDN CIJAGRA 2</td>
-                    <td>2014-2019</td>
-                </tr>
-                <tr>
-                    <td>SMPN 1 DAYEUHKOLOT</td>
-                    <td>2020-2022</td>
-                </tr>
-                <tr>
-                    <td>SMA KP BALEENDAH</td>
-                    <td>2023-2026</td>
-                </tr>
-            </table>
-        </section>
-
-        <section>
-            <h3 class="title-bar">Keahlian & Pengalaman</h3>
-            <ul>
-                <li>Komunikasi & Manajemen Waktu</li>
-                <li>SBB (2016-2020)</li>
-                <li>PRAMUKA (2017)</li>
-                <li>Sertifikat: TKA MTK (2026)</li>
-            </ul>
-        </section>
-
-        <section>
-            <h3 class="title-bar">Hobi</h3>
-            <p>Sepak Bola & Main Game 🎮</p>
-        </section>
-
-        <footer>
-            <hr>
-            <p>Halaman ini dibuat dengan penuh semangat tahun 90-an!</p>
-            <p>Visitor ke: <img src="https://counter.hits.io/alfi/count.svg" alt="Counter"></p>
-        </footer>
+            <section>
+                <h2 class="section-title">PENGALAMAN & SKILL</h2>
+                <p><strong>Organisasi:</strong> SBB (2016-2020), PRAMUKA (2017)</p>
+                <p><strong>Keahlian:</strong> Komunikasi, Manajemen Waktu, Kerja Sama Tim (Individu/Grup)</p>
+                <p><strong>Sertifikat:</strong> TKA MTK (2026)</p>
+            </section>
+        </main>
     </div>
+
+    <footer class="footer-vintage">
+        <p>Bahasa: Indonesia | Dokumen Resmi 2026</p>
+    </footer>
 </div>
 
 </body>
