--- a/index.html
+++ b/index.html
@@ -3,67 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae - Alfi Luthfillah</title>
+    <title>Curriculum Vitae - Alfi Luthfillah Alamsyah</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<div class="paper">
-    <div class="stamp">ORIGINAL</div>
-    
-    <header>
-        <h1 class="name-title">ALFI LUTHFILLAH ALAMSYAH</h1>
-        <p class="subtitle">ESTABLISHED 2008 • BOJONGSOANG, BANDUNG</p>
-    </header>
-
-    <hr class="double-line">
-
-    <div class="main-content">
-        <aside class="sidebar">
-            <div class="photo-container">
-                <img src="foto-alfi.jpg" alt="Foto Alfi" class="vintage-photo">
+<div class="cv-container">
+    <aside class="sidebar">
+        <div class="profile-header">
+            <div class="profile-photo-wrapper">
+                <img src="foto-alfi.jpg" alt="Foto Alfi Luthfillah Alamsyah" class="profile-photo">
             </div>
-            
-            <div class="contact-box">
-                <h3>CONTACT</h3>
-                <p>📧 alfiluthfillahalamsyah@gmail.com</p>
-                <p>📸 @alfilthfllh</p>
-                <p>📞 085183601902</p>
+            <h2>ALFI LUTHFILLAH ALAMSYAH</h2>
+            <p class="tagline">Pembelajar Tekun & Berintegritas</p>
+        </div>
+
+        <section class="contact-info">
+            <h3>KONTAK</h3>
+            <ul>
+                <li><span>Email:</span> alfiluthfillahalamsyah@gmail.com</li>
+                <li><span>Instagram:</span> @alfilthfllh</li>
+                <li><span>Telepon:</span> 085183601902</li>
+                <li><span>Alamat:</span> Bojongsoang, Bandung</li>
+            </ul>
+        </section>
+
+        <section class="skills">
+            <h3>KEAHLIAN</h3>
+            <ul>
+                <li>Komunikasi Efektif</li>
+                <li>Manajemen Waktu</li>
+                <li>Kerja Sama Tim</li>
+                <li>Mampu Bekerja Mandiri</li>
+            </ul>
+        </section>
+
+        <section class="languages">
+            <h3>BAHASA</h3>
+            <ul>
+                <li>Indonesia (Native)</li>
+            </ul>
+        </section>
+
+        <section class="hobbies">
+            <h3>HOBI</h3>
+            <ul>
+                <li>Sepak Bola</li>
+                <li>Bermain Game</li>
+            </ul>
+        </section>
+    </aside>
+
+    <main class="main-content">
+        <section class="about-me">
+            <h2>TENTANG SAYA</h2>
+            <p>Saya pribadi yang tekun, memiliki rasa ingin tahu tinggi, dan tertarik pada dunia pendidikan serta teknologi. Saya juga terus berusaha mengembangkan diri dan mempersiapkan masa depan yang lebih baik melalui pendidikan.</p>
+        </section>
+
+        <section class="education">
+            <h2>PENDIDIKAN</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>SMA KP BALEENDAH</h3>
+                        <p class="period">2023 - 2026</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>SMPN 1 DAYEUHKOLOT</h3>
+                        <p class="period">2020 - 2022</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-content">
+                        <h3>SDN CIJAGRA 2</h3>
+                        <p class="period">2014 - 2019</p>
+                    </div>
+                </div>
             </div>
+        </section>
 
-            <div class="hobbies">
-                <h3>HOBBIES</h3>
-                <p>Football • Gaming</p>
+        <section class="experience">
+            <h2>PENGALAMAN & SERTIFIKAT</h2>
+            <div class="item-list">
+                <div class="list-item">
+                    <h3>SBB (Sekolah Sepak Bola)</h3>
+                    <p class="period">2016 - 2020</p>
+                </div>
+                <div class="list-item">
+                    <h3>PRAMUKA</h3>
+                    <p class="period">2017</p>
+                </div>
+                 <div class="list-item">
+                    <h3>Sertifikat TKA MTK</h3>
+                    <p class="period">2026</p>
+                </div>
             </div>
-        </aside>
-
-        <main class="details">
-            <section>
-                <h2 class="section-title">PROFIL</h2>
-                <p>Saya pribadi yang tekun, memiliki rasa ingin tahu tinggi, dan tertarik pada dunia pendidikan serta teknologi. Saya juga terus berusaha mengembangkan diri dan mempersiapkan masa depan yang lebih baik melalui pendidikan.</p>
-            </section>
-
-            <section>
-                <h2 class="section-title">PENDIDIKAN</h2>
-                <ul class="vintage-list">
-                    <li><strong>SMA KP BALEENDAH</strong> <span class="year">(2023-2026)</span></li>
-                    <li><strong>SMPN 1 DAYEUHKOLOT</strong> <span class="year">(2020-2022)</span></li>
-                    <li><strong>SDN CIJAGRA 2</strong> <span class="year">(2014-2019)</span></li>
-                </ul>
-            </section>
-
-            <section>
-                <h2 class="section-title">PENGALAMAN & SKILL</h2>
-                <p><strong>Organisasi:</strong> SBB (2016-2020), PRAMUKA (2017)</p>
-                <p><strong>Keahlian:</strong> Komunikasi, Manajemen Waktu, Kerja Sama Tim (Individu/Grup)</p>
-                <p><strong>Sertifikat:</strong> TKA MTK (2026)</p>
-            </section>
-        </main>
-    </div>
-
-    <footer class="footer-vintage">
-        <p>Bahasa: Indonesia | Dokumen Resmi 2026</p>
-    </footer>
+        </section>
+    </main>
 </div>
 
 </body>
