--- a/index.html
+++ b/index.html
@@ -3,108 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae - Alfi Luthfillah Alamsyah</title>
+    <title>Alfi Luthfillah | Digital CV</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<div class="cv-container">
+<div class="glass-bg"></div>
+
+<div class="container">
     <aside class="sidebar">
-        <div class="profile-header">
-            <div class="profile-photo-wrapper">
-                <img src="foto-alfi.jpg" alt="Foto Alfi Luthfillah Alamsyah" class="profile-photo">
+        <div class="profile-section">
+            <div class="photo-wrapper">
+                <img src="foto-alfi.jpg" alt="Alfi Luthfillah" class="profile-img">
             </div>
-            <h2>ALFI LUTHFILLAH ALAMSYAH</h2>
-            <p class="tagline">Pembelajar Tekun & Berintegritas</p>
+            <h1>Alfi Luthfillah Alamsyah</h1>
+            <p class="role">Tech Enthusiast</p>
         </div>
 
-        <section class="contact-info">
-            <h3>KONTAK</h3>
-            <ul>
-                <li><span>Email:</span> alfiluthfillahalamsyah@gmail.com</li>
-                <li><span>Instagram:</span> @alfilthfllh</li>
-                <li><span>Telepon:</span> 085183601902</li>
-                <li><span>Alamat:</span> Bojongsoang, Bandung</li>
-            </ul>
-        </section>
-
-        <section class="skills">
-            <h3>KEAHLIAN</h3>
-            <ul>
-                <li>Komunikasi Efektif</li>
-                <li>Manajemen Waktu</li>
-                <li>Kerja Sama Tim</li>
-                <li>Mampu Bekerja Mandiri</li>
-            </ul>
-        </section>
-
-        <section class="languages">
-            <h3>BAHASA</h3>
-            <ul>
-                <li>Indonesia (Native)</li>
-            </ul>
-        </section>
-
-        <section class="hobbies">
-            <h3>HOBI</h3>
-            <ul>
-                <li>Sepak Bola</li>
-                <li>Bermain Game</li>
-            </ul>
-        </section>
+        <div class="info-section">
+            <div class="contact-item">
+                <p class="label">Email</p>
+                <p class="value">alfiluthfillahalamsyah@gmail.com</p>
+            </div>
+            <div class="contact-item">
+                <p class="label">Instagram</p>
+                <p class="value">@alfilthfllh</p>
+            </div>
+            <div class="contact-item">
+                <p class="label">Phone</p>
+                <p class="value">085183601902</p>
+            </div>
+            <div class="contact-item">
+                <p class="label">Location</p>
+                <p class="value">Bojongsoang, Bandung</p>
+            </div>
+        </div>
     </aside>
 
     <main class="main-content">
-        <section class="about-me">
-            <h2>TENTANG SAYA</h2>
-            <p>Saya pribadi yang tekun, memiliki rasa ingin tahu tinggi, dan tertarik pada dunia pendidikan serta teknologi. Saya juga terus berusaha mengembangkan diri dan mempersiapkan masa depan yang lebih baik melalui pendidikan.</p>
+        <section class="card">
+            <h2 class="section-title">Tentang Saya</h2>
+            <p>Saya pribadi yang tekun, memiliki rasa ingin tahu tinggi, dan tertarik pada dunia pendidikan serta teknologi. Saya terus berusaha mengembangkan diri dan mempersiapkan masa depan yang lebih baik melalui pendidikan.</p>
         </section>
 
-        <section class="education">
-            <h2>PENDIDIKAN</h2>
+        <section class="card">
+            <h2 class="section-title">Pendidikan</h2>
             <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>SMA KP BALEENDAH</h3>
-                        <p class="period">2023 - 2026</p>
-                    </div>
+                <div class="timeline-box">
+                    <h3>SMA KP BALEENDAH</h3>
+                    <span>2023 - 2026</span>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>SMPN 1 DAYEUHKOLOT</h3>
-                        <p class="period">2020 - 2022</p>
-                    </div>
+                <div class="timeline-box">
+                    <h3>SMPN 1 DAYEUHKOLOT</h3>
+                    <span>2020 - 2022</span>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>SDN CIJAGRA 2</h3>
-                        <p class="period">2014 - 2019</p>
-                    </div>
+                <div class="timeline-box">
+                    <h3>SDN CIJAGRA 2</h3>
+                    <span>2014 - 2019</span>
                 </div>
             </div>
         </section>
 
-        <section class="experience">
-            <h2>PENGALAMAN & SERTIFIKAT</h2>
-            <div class="item-list">
-                <div class="list-item">
-                    <h3>SBB (Sekolah Sepak Bola)</h3>
-                    <p class="period">2016 - 2020</p>
-                </div>
-                <div class="list-item">
-                    <h3>PRAMUKA</h3>
-                    <p class="period">2017</p>
-                </div>
-                 <div class="list-item">
-                    <h3>Sertifikat TKA MTK</h3>
-                    <p class="period">2026</p>
-                </div>
+        <section class="card">
+            <h2 class="section-title">Keahlian</h2>
+            <div class="skills-grid">
+                <span class="skill-pill">Komunikasi</span>
+                <span class="skill-pill">Manajemen Waktu</span>
+                <span class="skill-pill">Kerja Sama Tim</span>
+                <span class="skill-pill">Problem Solving</span>
+                <span class="skill-pill">Bahasa Indonesia</span>
             </div>
         </section>
+
+        <div class="grid-2">
+            <section class="card">
+                <h2 class="section-title">Pengalaman</h2>
+                <ul class="list">
+                    <li>SBB (2016-2020)</li>
+                    <li>PRAMUKA (2017)</li>
+                </ul>
+            </section>
+            <section class="card">
+                <h2 class="section-title">Hobby</h2>
+                <ul class="list">
+                    <li>Sepak Bola</li>
+                    <li>Main Game</li>
+                </ul>
+            </section>
+        </div>
     </main>
 </div>
 
