--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <section class="card">
                 <h2 class="section-title">Pengalaman</h2>
                 <ul class="list">
-                    <li>SBB (2016-2020)</li>
+                    <li>SSB (2016-2020)</li>
                     <li>PRAMUKA (2017)</li>
                 </ul>
             </section>
