--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <aside class="sidebar fade-in">
         <div class="profile-box">
             <div class="photo-ring">
-                <img src="foto-alfi.jpg" alt="Alfi Luthfillah" class="profile-img">
+                <img src="WhatsApp Image 2026-02-04 at 14.42.48.jpeg" alt="Alfi Luthfillah" class="profile-img">
             </div>
             <h1>Alfi Luthfillah</h1>
             <p class="status">● Active 2026</p>
@@ -62,7 +62,7 @@
 
         <section class="card clickable" onclick="playAnim(this)">
             <h2 class="title">PENGALAMAN & SERTIFIKAT</h2>
-            <p>• SBB (2016-2020)</p>
+            <p>• SSB (2016-2020)</p>
             <p>• PRAMUKA (2017)</p>
             <p>• TKA MTK Certified (2026)</p>
         </section>
